--- a/analysis/retinatreatmentKO.Rmd
+++ b/analysis/retinatreatmentKO.Rmd
@@ -20,10 +20,14 @@ anno$Gene <-sapply(anno$Name,function(x)strsplit(x,"\\|")[[1]][6])
 anno_tximport <-anno %>%
   dplyr::select(target_id = Name, Gene)
 
-txi.dseq2
+txi <- tximport(files, type = "salmon", tx2gene = anno_tximport)
+txi.dseq2 <- data.frame(txi$counts)
+
 samples <- str_extract(files, "MF_\\d+M")
 colnames(txi.dseq2) <- samples
 colnames(txi.dseq2)
+
+mouse <- read.csv('/Users/bhattiprolum2/Desktop/mitra_mouse.csv')
 
 colnames(mouse)[1] <- "Sample"
 
@@ -70,7 +74,7 @@ plotMA(resABCA4KO_lfc, ylim = c(-2,2))
 ```
 ## volcano plot
 ```{r}
-
+library(ggrepel)
 volcano_ABCA4KO <- resABCA4KO %>%
   as_tibble(rownames = "Gene") %>%
   filter(!is.na(log2FoldChange)) 
@@ -100,6 +104,7 @@ volcano_ABCA4KO %>%
 ```
 ## genes
 ```{r}
+library(ggthemes)
 retina_ABCA4KO_counts <- as.data.frame(assay(dds_retina_ABCA4KO))
 
 retina_ABCA4KO_counts %>%
@@ -117,13 +122,14 @@ retina_ABCA4KO_counts %>%
 ## PCA
 
 ```{r}
+ntop = 1000
 vst_retinaKO <- vst[,c('MF_11M', 'MF_9M', 'MF_5M', 'MF_7M')]
 scaled_counts_retinaKO <- assay(vst_retinaKO)
 
 Pvars4 <- rowVars(scaled_counts_retinaKO)
 select4 <- order(Pvars4, decreasing = TRUE)[seq_len(min(ntop, 
                                                         length(Pvars4)))]
-PCA_retinaKO <- prcomp(t(scaled_counts_retinaKO[select1, ]), scale = F)
+PCA_retinaKO <- prcomp(t(scaled_counts_retinaKO[select4, ]), scale = F)
 percentVar4 <- round(100*PCA_retinaKO$sdev^2/sum(PCA_retinaKO$sdev^2),1)
 
 
@@ -136,13 +142,13 @@ dataGG4 = data.frame(PC_retinaKO1 = PCA_retinaKO$x[,1], PC_retinaKO2 = PCA_retin
 
 ggplot(dataGG4, aes(PC_retinaKO1, PC_retinaKO2, color=treatment)) +
   geom_point(size=3) +
-  xlab(paste0("PC1: ",percentVar3[1],"% variance")) +
-  ylab(paste0("PC2: ",percentVar3[2],"% variance")) + labs(title = "Retina ABCA4KO PCA 1/2")
+  xlab(paste0("PC1: ",percentVar4[1],"% variance")) +
+  ylab(paste0("PC2: ",percentVar4[2],"% variance")) + labs(title = "Retina ABCA4KO PCA 1/2")
 
 ggplot(dataGG4, aes(PC_retinaKO3, PC_retinaKO4, color=treatment)) +
   geom_point(size=3) +
-  xlab(paste0("PC3: ",percentVar3[3],"% variance")) +
-  ylab(paste0("PC4: ",percentVar3[4],"% variance")) + labs(title = "Retina ABCA4KO PCA 3/4")
+  xlab(paste0("PC3: ",percentVar4[3],"% variance")) +
+  ylab(paste0("PC4: ",percentVar4[4],"% variance")) + labs(title = "Retina ABCA4KO PCA 3/4")
 ```
 
 
