--- a/analysis/rpetreatment.Rmd
+++ b/analysis/rpetreatment.Rmd
@@ -1,9 +1,11 @@
 ---
-title: "R Notebook"
-output:
-  html_notebook: default
-  html_document:
-    df_print: paged
+title: "RPE Treated ABCA4KO vs Untreated ABCA4KO/WT Diff Test"
+author: "Maya Bhattiprolu, David McGaughey"
+date: "6/1/23"
+output: 
+  html_notebook:
+    toc: TRUE
+    toc_float: TRUE
 ---
 
 
@@ -47,9 +49,15 @@ DESeq2Table <- DESeq(dds, parallel = T)
 vst <- varianceStabilizingTransformation(DESeq2Table)
 colnames(vst) <- colData(dds)$value
 
+mouse_metadata2 <- mouse_metadata %>%
+  dplyr::select(Sample, Treatment, Genotype, Tissue) %>% 
+  mutate(MisLabel = case_when(Sample == 'MF-10M' ~ "Retina?",
+                              Sample == 'MF-6M' ~ "Retina?"))
+
 ```
 
-## diff test rpe
+# Diff test 
+RPE treated ABCA4KO vs untreated ABCA4KO/WT
 ```{r}
 dds_against_treatment3 <- DESeqDataSetFromTximport(txi, mouse_metadata, design = ~Treatment)
 colnames(dds_against_treatment3) <- colData(dds)$value
@@ -128,7 +136,7 @@ rpe_treatment_counts %>%
   as_tibble(rownames = 'Gene') %>%
   filter(Gene %in% c('Igkv1-117', 'Cd4', 'Sult1c1', 'Ccl2', 'Tnnc1', 'Tnni1', 'Myl2', 'Aspn', 'Myh7', 'Myh3')) %>%
   pivot_longer(-Gene) %>%
-  left_join(mouse_metadata %>% select(name, value, Genotype, Treatment, Tissue), by = c('name' = 'value')) %>%
+  left_join(mouse_metadata %>% dplyr::select(name, value, Genotype, Treatment, Tissue), by = c('name' = 'value')) %>%
   ggplot(aes(x = Treatment, y = log1p(value), color = name, shape = Genotype)) +
   geom_boxplot(color = 'black') +
   geom_point() +
@@ -144,31 +152,93 @@ vst_rpetreatment <- vst[,c('MF_12M', 'MF_2M', 'MF_4M', 'MF_8M')]
 scaled_counts_rpetreatment <- assay(vst_rpetreatment)
 ntop = 1000
 
-Pvars5 <- rowVars(scaled_counts_rpetreatment)
-select5 <- order(Pvars5, decreasing = TRUE)[seq_len(min(ntop, 
-                                                        length(Pvars5)))]
-PCA_rpetreatment <- prcomp(t(scaled_counts_rpetreatment[select5, ]), scale = F)
-percentVar5 <- round(100*PCA_rpetreatment$sdev^2/sum(PCA_rpetreatment$sdev^2),1)
+Pvars <- rowVars(scaled_counts_rpetreatment)
+select <- order(Pvars, decreasing = TRUE)[seq_len(min(ntop, 
+                                                        length(Pvars)))]
+PCA_rpetreatment <- prcomp(t(scaled_counts_rpetreatment[select, ]), scale = F)
+percentVar <- round(100*PCA_rpetreatment$sdev^2/sum(PCA_rpetreatment$sdev^2),1)
 
 
-dataGG5 = data.frame(PC_rpetreatment1 = PCA_rpetreatment$x[,1], PC_rpetreatment2 = PCA_rpetreatment$x[,2], 
+dataGG = data.frame(PC_rpetreatment1 = PCA_rpetreatment$x[,1], PC_rpetreatment2 = PCA_rpetreatment$x[,2], 
                      PC_rpetreatment3 = PCA_rpetreatment$x[,3], PC_rpetreatment4 = PCA_rpetreatment$x[,4], 
                      tissue = colData(vst_rpetreatment)$Tissue,
                      treatment=colData(vst_rpetreatment)$Treatment,
                      genotype = colData(vst_rpetreatment)$Genotype)
 
 
-ggplot(dataGG5, aes(PC_rpetreatment1, PC_rpetreatment2, color=treatment)) +
+ggplot(dataGG, aes(PC_rpetreatment1, PC_rpetreatment2, color=treatment)) +
   geom_point(size=3) +
-  xlab(paste0("PC1: ",percentVar5[1],"% variance")) +
-  ylab(paste0("PC2: ",percentVar5[2],"% variance")) + labs(title = "RPE Treatment PCA 1/2")
+  xlab(paste0("PC1: ",percentVar[1],"% variance")) +
+  ylab(paste0("PC2: ",percentVar[2],"% variance")) + labs(title = "RPE Treatment PCA 1/2")
 
-ggplot(dataGG5, aes(PC_rpetreatment3, PC_rpetreatment4, color=treatment)) +
+ggplot(dataGG, aes(PC_rpetreatment3, PC_rpetreatment4, color=treatment)) +
   geom_point(size=3) +
-  xlab(paste0("PC3: ",percentVar5[3],"% variance")) +
-  ylab(paste0("PC4: ",percentVar5[4],"% variance")) + labs(title = "RPE Treatment PCA 3/4")
+  xlab(paste0("PC3: ",percentVar[3],"% variance")) +
+  ylab(paste0("PC4: ",percentVar[4],"% variance")) + labs(title = "RPE Treatment PCA 3/4") 
 ```
 
+## go enrichment
+```{r}
+
+library(clusterProfiler)
+library(enrichplot)
+library(org.Mm.eg.db)
+
+diff_genes <- res_rpetreatment_lfc %>% 
+  as_tibble(rownames = 'Gene') %>% 
+  filter(padj < 0.01) %>%
+  filter(abs(log2FoldChange) > 1)
 
 
+eg_diff_genes <- bitr(diff_genes$Gene, fromType="SYMBOL", toType="ENTREZID", OrgDb="org.Mm.eg.db")
+eg_diff_genes <- diff_genes %>%
+  left_join(., eg_diff_genes, by = c('Gene' = 'SYMBOL'))
 
+# only keep genes that have a mean of >= 10 reads across all sample
+
+expressed <- txi$counts[txi$counts %>% rowMeans() > 10,] %>% row.names()
+eg_universe = bitr(res_treatment_lfc %>% 
+                              as_tibble(rownames = 'Gene') %>% 
+                              filter(Gene %in% expressed) %>% 
+                              pull(Gene), fromType="SYMBOL", toType="ENTREZID", OrgDb="org.Mm.eg.db")
+
+ego <- enrichGO(gene= eg_diff_genes$ENTREZID,
+                universe      = eg_universe$ENTREZID,
+                OrgDb         = org.Mm.eg.db,
+                ont           = "all",
+                pAdjustMethod = "BH",
+                pvalueCutoff  = 0.01,
+                qvalueCutoff  = 0.05,
+                readable      = TRUE)
+ego
+```
+
+```{r, fig.height=10, fig.width=6}
+p1 <- dotplot(ego, showCategory=30) + ggtitle("Dotplot for GO")
+p1
+```
+### table
+```{r}
+ego <- setReadable(ego, OrgDb = org.Mm.eg.db, keyType = 'ENTREZID')
+ego@result %>% DT::datatable()
+```
+
+### cnet plot
+```{r, fig.width=6, fig.height=4}
+geneList <- eg_diff_genes$log2FoldChange
+names(geneList) <- eg_diff_genes$Gene
+cnet <- cnetplot(ego, foldChange = geneList) + scale_color_viridis_c(name = 'log2(FoldChange)')
+cnet
+```
+
+### Enriched GO Term Relationships
+```{r, fig.width=16, fig.height=16}
+ego_pair <- pairwise_termsim(ego) 
+go_term_relationships <- emapplot(ego_pair,layout="kk") #+ ggtitle("Enriched GO Term Relationships")
+go_term_relationships
+```
+
+# session info
+```{r}
+sessionInfo()
+```
