--- a/analysis/retinatreatment.Rmd
+++ b/analysis/retinatreatment.Rmd
@@ -1,6 +1,11 @@
 ---
-title: "R Notebook"
-output: html_notebook
+title: "Retina Untreated WT/ABCA4KO vs Treated ABCA4KO Diff Test"
+author: "Maya Bhattiprolu, David McGaughey"
+date: "6/1/23"
+output: 
+  html_notebook:
+    toc: TRUE
+    toc_float: TRUE
 ---
 
 
@@ -42,8 +47,16 @@ DESeq2Table <- DESeq(dds, parallel = T)
 vst <- varianceStabilizingTransformation(DESeq2Table)
 colnames(vst) <- colData(dds)$value
 
+mouse_metadata2 <- mouse_metadata %>%
+  dplyr::select(Sample, Treatment, Genotype, Tissue) %>% 
+  mutate(MisLabel = case_when(Sample == 'MF-10M' ~ "Retina?",
+                              Sample == 'MF-6M' ~ "Retina?"))
+mouse_metadata2
+
 ```
-## diff test
+
+# Diff test
+Retina untreated WT/ABCA4KO vs treated ABCA4KO
 ```{r}
 
 dds_against_treatment2 <- DESeqDataSetFromTximport(txi, mouse_metadata, design = ~Treatment)
@@ -88,17 +101,17 @@ volcano_treatment<- res_treatment %>%
 
 volcano_treatment_filter1 <- volcano_treatment %>%
   arrange(padj) %>%
-  filter(padj < 0.05) %>%
+  filter(padj < 0.01) %>%
   filter(log2FoldChange >1 | log2FoldChange < -1)
 
 volcano_treatment_filter2 <-volcano_treatment %>%
   arrange(padj) %>%
-  filter(padj < 0.05) %>%
+  filter(padj < 0.01) %>%
   filter(log2FoldChange >1)
 
 volcano_treatment_filter3 <- volcano_treatment %>%
   arrange(padj) %>%
-  filter(padj < 0.05) %>%
+  filter(padj < 0.01) %>%
   filter(log2FoldChange < -1)
 
 
@@ -119,7 +132,7 @@ retina_treatment_counts %>%
   as.tibble(rownames = "Gene") %>%
   filter(Gene %in% c('Obscn', 'Nsl1', 'Rspo2', 'Sst', 'Fcgr3', 'Adgrl4', 'Ip6k3', 'Fam205a2')) %>%
   pivot_longer(-Gene) %>%
-  left_join(mouse_metadata %>% select(name, value, Genotype, Treatment, Tissue), by = c('name' = 'value')) %>%
+  left_join(mouse_metadata %>% dplyr::select(name, value, Genotype, Treatment, Tissue), by = c('name' = 'value')) %>%
   ggplot(aes(x = Treatment, y = log1p(value), color = name, shape = Genotype)) +
   geom_boxplot(color = "black") +
   geom_point() +
@@ -135,32 +148,96 @@ ntop = 1000
 vst_retinatreatment <- vst[,c('MF_11M', 'MF_1M', 'MF_3M', 'MF_5M', 'MF_7M', 'MF_9M')]
 scaled_counts_retinatreatment <- assay(vst_retinatreatment)
 
-Pvars3 <- rowVars(scaled_counts_retinatreatment)
-select3 <- order(Pvars3, decreasing = TRUE)[seq_len(min(ntop, 
-                                                        length(Pvars3)))]
-PCA_retinatreatment <- prcomp(t(scaled_counts_retinatreatment[select3, ]), scale = F)
-percentVar3 <- round(100*PCA_retinatreatment$sdev^2/sum(PCA_retinatreatment$sdev^2),1)
+Pvars <- rowVars(scaled_counts_retinatreatment)
+select <- order(Pvars, decreasing = TRUE)[seq_len(min(ntop, 
+                                                        length(Pvars)))]
+PCA_retinatreatment <- prcomp(t(scaled_counts_retinatreatment[select, ]), scale = F)
+percentVar <- round(100*PCA_retinatreatment$sdev^2/sum(PCA_retinatreatment$sdev^2),1)
 
 
-dataGG3 = data.frame(PC_retinatreatment1 = PCA_retinatreatment$x[,1], PC_retinatreatment2 = PCA_retinatreatment$x[,2], 
+dataGG = data.frame(PC_retinatreatment1 = PCA_retinatreatment$x[,1], PC_retinatreatment2 = PCA_retinatreatment$x[,2], 
                      PC_retinatreatment3 = PCA_retinatreatment$x[,3], PC_retinatreatment4 = PCA_retinatreatment$x[,4], 
                      tissue = colData(vst_retinatreatment)$Tissue,
                      treatment=colData(vst_retinatreatment)$Treatment,
                      genotype = colData(vst_retinatreatment)$Genotype)
 
-ggplot(dataGG3, aes(PC_retinatreatment1, PC_retinatreatment2, color=treatment, shape = genotype)) +
+ggplot(dataGG, aes(PC_retinatreatment1, PC_retinatreatment2, color=treatment, shape = genotype)) +
   geom_point(size=3) +
-  xlab(paste0("PC1: ",percentVar3[1],"% variance")) +
-  ylab(paste0("PC2: ",percentVar3[2],"% variance")) + labs(title = "Retina Treatment PCA 1/2")
+  xlab(paste0("PC1: ",percentVar[1],"% variance")) +
+  ylab(paste0("PC2: ",percentVar[2],"% variance")) + labs(title = "Retina Treatment PCA 1/2")
 
-ggplot(dataGG3, aes(PC_retinatreatment3, PC_retinatreatment4, color=treatment, shape = genotype)) +
+ggplot(dataGG, aes(PC_retinatreatment3, PC_retinatreatment4, color=treatment, shape = genotype)) +
   geom_point(size=3) +
-  xlab(paste0("PC3: ",percentVar3[3],"% variance")) +
-  ylab(paste0("PC4: ",percentVar3[4],"% variance")) + labs(title = "Retina Treatment PCA 3/4")
+  xlab(paste0("PC3: ",percentVar[3],"% variance")) +
+  ylab(paste0("PC4: ",percentVar[4],"% variance")) + labs(title = "Retina Treatment PCA 3/4")
 
 ```
 
 
+## go enrichment
+```{r}
+# https://yulab-smu.top/biomedical-knowledge-mining-book/index.html
+library(clusterProfiler)
+library(enrichplot)
+library(org.Mm.eg.db)
 
+diff_genes <- res_treatment %>% 
+  as_tibble(rownames = 'Gene') %>% 
+  filter(padj < 0.01)
+
+
+eg_diff_genes <- bitr(diff_genes$Gene, fromType="SYMBOL", toType="ENTREZID", OrgDb="org.Mm.eg.db")
+eg_diff_genes <- diff_genes %>%
+  left_join(., eg_diff_genes, by = c('Gene' = 'SYMBOL'))
+
+# only keep genes that have a mean of >= 10 reads across all sample
+expressed <- txi$counts[txi$counts %>% rowMeans() > 10,] %>% row.names()
+eg_universe = bitr(res_treatment %>% 
+                              as_tibble(rownames = 'Gene') %>% 
+                              filter(Gene %in% expressed) %>% 
+                              pull(Gene), fromType="SYMBOL", toType="ENTREZID", OrgDb="org.Mm.eg.db")
+
+ego <- enrichGO(gene= eg_diff_genes$ENTREZID,
+                universe      = eg_universe$ENTREZID,
+                OrgDb         = org.Mm.eg.db,
+                ont           = "all",
+                pAdjustMethod = "BH",
+                pvalueCutoff  = 0.01,
+                readable      = TRUE)
+ego
+```
+
+
+```{r}
+p1 <- dotplot(ego, showCategory=30) + ggtitle("Dotplot for GO")
+p1
+```
+
+### Table
+```{r}
+ego <- setReadable(ego, OrgDb = org.Mm.eg.db, keyType = 'ENTREZID')
+ego@result %>% DT::datatable()
+```
+
+### "CNET" Plot
+Relationships between related GO terms with shared genes
+```{r, fig.width=6, fig.height=4}
+geneList <- eg_diff_genes$log2FoldChange
+names(geneList) <- eg_diff_genes$Gene
+cnet <- cnetplot(ego, foldChange = geneList) + scale_color_viridis_c(name = 'log2(FoldChange)')
+cnet
+```
+
+### Enriched GO Term Relationships
+Shows the "sets" of GO terms to increase understanding of what the diff gene sets are doing. There are many related GO terms.
+```{r, fig.width=8, fig.height=8}
+ego_pair <- pairwise_termsim(ego) 
+go_term_relationships <- emapplot(ego_pair,layout="kk") #+ ggtitle("Enriched GO Term Relationships")
+go_term_relationships
+```
+# session info
+```{r}
+sessionInfo()
+```
 
 
